examples/kitchen-sink/src/pages/errors/client-component/cc-syntax-error.tsx
"use client";

// import { doesntexist } from "this-module-doesnt-exist";

export default function CCImportError() {
  // console.log({ doesntexist });
  return null;
}
